Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88861

QWebEngineUrlRequestInterceptor ignores extra HTTP headers when redirecting

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.4
    • 5.15.1
    • WebEngine
    • None
    • Linux/X11
    • 518cb95730dd1ac889cbe732fab11019085a5cd8 (qt/qtwebengine/5.15)

    Description

      QWebEngineUrlRequestInterceptor::interceptRequests allows intercepting requests made by the web site and inspect or modify them. Among others it allows:

      • setting custom HTTP headers via QWebEngineUrlRequestInfo::setHttpHeader
      • redirecting the browser to a custom URL via QWebEngineUrlRequestInfo::redirect

      While both of the features work fine alone, the don't work combined, which means that when redirecting a browser request and adding custom headers, the redirection works, but the custom headers are not added to the new redirected request.

      Attachments

        For Gerrit Dashboard: QTBUG-88861
        # Subject Branch Project Status CR V

        Activity

          People

            kiburtse Kirill Burtsev
            krissn Krzysztof Nowicki
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes